# devops-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  smoke_test.py
src/devops_mcp/: __init__.py  docker_client.py  server.py  shell_runner.py  system_info.py
